[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://entities/hazard/hazard_zone.gd" id="1_hazard_zone"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(4, 2, 4)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(4, 2, 4)

[node name="HazardZone" type="Area3D"]
script = ExtResource("1_hazard_zone")

[node name="ZoneShape" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1")

[node name="ZoneMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1")
cast_shadow = 0
